fix: top z-index

--- a/WebContent/resources/learnweb/sass/utilities/_others.scss
+++ b/WebContent/resources/learnweb/sass/utilities/_others.scss
@@ -152,3 +152,7 @@ section:target .highlight {
 .encrypt-email::after {
   content: attr(data-name) '@' attr(data-domain) '.' attr(data-tld);
 }
+
+.sticky-top {
+  z-index: 1000 !important;
+}
